# rental-yards

./: .env  docker-compose.yaml  test.sqlite3
.github/workflows/: backend-build-and-push.yaml  frontend-build-and-push.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  test.sqlite3
backend/api/auth/: dependency.py  endpoint.py  schemas.py  utils.py
backend/api/v1/: router.py
backend/api/v1/auth/: dependency.py  endpoint.py  schemas.py  utils.py
backend/core/: __init__.py  config.py  dependency.py  security.py
backend/core/certs/: jwt-private.pem  jwt-public.pem
backend/database/: base.py  session.py
backend/migrations/: env.py
backend/migrations/versions/: 04d9a3bee08e_user.py
backend/models/: user.py
backend/utils/: __init__.py  utils.py
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
nginx/: default.conf
