[tool.poetry]
name = "rental-yard"
version = "0.1.0"
description = ""
authors = ["hojiakbar2806 <hojiakbarnasriddinov2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gunicorn = "^23.0.0"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
